--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@eslint/js": "^9.30.0",
     "@types/express": "4.17.13",
+    "eslint": "^9.30.0",
+    "globals": "^16.3.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "2.0.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "typescript-eslint": "^8.35.1"
   },
   "dependencies": {
     "express": "4.18.1"
