--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "typescript-eslint": "^8.35.1"
   },
   "dependencies": {
-    "express": "4.18.1"
+    "dotenv": "^17.0.1",
+    "express": "4.18.1",
+    "http-status-codes": "^2.3.0"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./build/index.js"
   }
 }
